Started on a simple website

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-Hello World
-
-Someone wobsite make pls
+<HTML>
+<HEAD><title>Best game EU</title></HEAD>
+<BODY>
+WIP
+This is official Legendary IceCube Website
+</BODY>
+</HTML>
