Added fancy picture

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <HTML>
 <HEAD><title>Best game EU</title></HEAD>
 <BODY>
-WIP
-This is official Legendary IceCube Website
+<center><img src="resources/titleimage.jpg"></img></center>
+<center><h>WIP
+This is official Legendary IceCube Website</h></center>
 </BODY>
 </HTML>
