Test with poster on website

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <HTML>
 <HEAD><title>Best game EU</title></HEAD>
 <BODY>
+<center><img src="resources/legend-cube-poster.jpg"></img></center>
 <center><img src="resources/titleimage.jpg"></img></center>
 <center><h>WIP
 This is official Legendary IceCube Website</h></center>
