changed picture, black background and lower case since niklasis complaining

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<HTML>
-<HEAD><title>Best game EU</title></HEAD>
-<BODY>
+<html>
+<head><title>Legend of Cube</title></head>
+<body bgcolor="000000">
 <center><img src="resources/legend-cube-poster.jpg"></img></center>
-<center><img src="resources/titleimage.jpg"></img></center>
-<center><h>WIP
-This is official Legendary IceCube Website</h></center>
-</BODY>
-</HTML>
+<center><h><font color="ffffff">WIP
+This is official Legendary IceCube Website</font></h></center>
+</body>
+</html>
