Fancy background, not so fancy html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>Legend of Cube</title></head>
-<body bgcolor="000000">
-<center><img src="resources/legend-cube-poster.jpg"></img></center>
+<body bgcolor="000000" background="resources/background.png" style="margin:0;padding:0">
+<center><img src="resources/legend-cube-poster.jpg" align="top"></img></center>
 <center><h><font color="ffffff">WIP
 This is official Legendary IceCube Website</font></h></center>
 </body>
