Less deprecated html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
+<!DOCTYPE html>
 <html>
-<head><title>Legend of Cube</title></head>
-<body bgcolor="000000" background="resources/background.png" style="margin:0;padding:0">
-<center><img src="resources/legend-cube-poster.jpg" align="top"></img></center>
-<center><h><font color="ffffff">WIP
-This is official Legendary IceCube Website</font></h></center>
+<head>
+<meta charset="utf-8">
+<title>Legend of Cube</title>
+<style>
+body {
+    background-color: #080f15;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+</style>
+</head>
+<body>
+<img src="resources/legend-cube-poster.jpg"></img>
 </body>
 </html>
