--- a/index.html
+++ b/index.html
@@ -4,15 +4,51 @@
 <meta charset="utf-8">
 <title>Legend of Cube</title>
 <style>
+body, h1, h2 {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: #080f15;
     text-align: center;
-    margin: 0;
-    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+}
+
+h1 {
+    margin-top: 0.9em;
+    margin-bottom: 0.2em;
+    font-size: 2.3em;
+    font-weight: bold;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.button {
+    display: inline-block;
+    margin: 0.5em 0.2em;
+    padding: 10px;
+    min-width: 6em;
+    font-size: 1.2em;
+    border-radius: 8px;
+    border: 3px solid white;
 }
 </style>
 </head>
 <body>
-<img src="resources/legend-cube-poster.jpg"></img>
+<img src="resources/legend-cube-poster.jpg">
+
+<h1>Download</h1>
+
+<span class="button">Coming Soon</span>
+
+<h1>Links</h1>
+
+<a class="button" href="https://github.com/LegendOfCube/LegendOfCube-Game">Github Repo</a><a class="button" href="https://github.com/LegendOfCube/LegendOfCube-Game/releases">Releases</a>
+
 </body>
 </html>
