Add download link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ a {
 
 <h1>Download</h1>
 
-<span class="button">Coming Soon</span>
+<a class="button" href="https://github.com/LegendOfCube/LegendOfCube-Game/releases/download/0.3/legendofcube-setup-0.3.0.0.exe">Windows</a><span class="button">More TBA</span>
 
 <h1>Links</h1>
 
